# web-scraper-fastapi

./: README.md  pyproject.toml  requirements.txt
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  scraper.py
data/: users.json
